:sparkles: atualizando o frontend

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Whatsapp Sender</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha384-xVePiofB0ITJTb+bHK0uTEIgOqXvpkhjK7IGqi6l9RI++urzkJcnFe5CSB5OGPvp" crossorigin="anonymous">
 </head>
 <body>
 
@@ -27,7 +28,10 @@
                   <label for="file">File</label>
                   <input type="file" class="form-control-file" id="file" name="file">
                 </div>
-                <button type="submit" class="btn btn-primary btn-block">Send</button>
+                <button type="submit" class="btn btn-primary btn-block" style="background-color:rgb(7, 196, 7); border-color: aquamarine; color: black;">
+                    <img src="whatsapp.png" alt="WhatsApp Icon" style="width: 6%;">
+                    Send
+                </button>
               </form>
             </div>
           </div>
